# activizer

./: LICENSE  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py
activizer/: __init__.py  app.py  data.py  random_sampling.py  views.py
activizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
activizer/static/: script.js  style.css
activizer/templates/: after.html  display_image.html  final.html  index.html  predict.html  result.html  upload_model.html
