[metadata]

name = activizer-Shreyas_Kamath
version = 1.0.0
author = Shreyas Kamath
author_email = shreyaskamath18@gmail.com

url = https://github.com/s18k/activizer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

