[metadata]

name = activizer-Shreyas_Kamath
version = 1.0.5
author = Shreyas Kamath
author_email = shreyaskamath18@gmail.com

url = https://github.com/s18k/activizer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3.0
    Operating System :: OS Independent

